worked on login page

--- a/login.html
+++ b/login.html
@@ -1,15 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Login</title>
-</head>
-<body>
-  <section class="row container">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Login to Your Account</title>
+  </head>
 
-  </section>
-</body>
+  <body class="is-mobile main">
+    <header class="navbar" role="navigation" aria-label="main navigation">
+      <nav class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="/">
+            <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+          </a>
+
+          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+          <div class="navbar-start">
+
+            <div class="navbar-item has-dropdown is-hoverable">
+              <a class="navbar-link">
+                More
+              </a>
+
+              <div class="navbar-dropdown">
+                <a class="navbar-item">
+                  About
+                </a>
+                <a class="navbar-item">
+                  Jobs
+                </a>
+                <a class="navbar-item">
+                  Contact
+                </a>
+                <hr class="navbar-divider">
+                <a class="navbar-item">
+                  Report an issue
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="navbar-end">
+            <div class="navbar-item">
+              <div class="buttons">
+                <a href="./index.html" class="button is-primary">
+                  <strong>Sign up</strong>
+                </a>
+                <a href="./login.html" class="button is-light">
+                  Log in
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="signup hero is-large">
+      <section class="hero-body column is-one-third is-offset-4-desktop">
+        <form id="form" class="form">
+          <span class="columns">
+            <label class="label column is-full" for="email">Email:
+              <input class="input" id="email" type="email" placeholder="email@address.com" required validate>
+            </label>
+          </span>
+
+          <span class="columns">
+            <label class="label column is-full" for="passowrd">Password:
+              <input class="input" id="password" type="password" placeholder="******" required>
+            </label>
+          </span>
+          <span class="column">
+            <input class="button is-primary" type="submit">
+            <a class="tag has-text-link" href="./index.html">Create an Account</a>
+          </span>
+        </form>
+      </section>
+    </div>
+  </body>
+
 </html>
