--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body class="is-mobile main">
-    <header class="navbar is-dark" role="navigation" aria-label="main navigation">
+    <header class="navbar" role="navigation" aria-label="main navigation">
       <nav class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
@@ -53,10 +53,10 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a class="button is-primary">
+                <a href="./index.html" class="button is-primary">
                   <strong>Sign up</strong>
                 </a>
-                <a class="button is-light">
+                <a href="./login.html" class="button is-light">
                   Log in
                 </a>
               </div>
