--- a/login.html
+++ b/login.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.8.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>Login to Your Account</title>
   </head>
 
   <body class="is-mobile main">
+
     <header class="navbar" role="navigation" aria-label="main navigation">
+
+      <!-- start of header template -->
       <nav class="container">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
-            <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+            <span class="mdi mdi-library mdi-24px has-text-link"> InvoiceCreator</span>
           </a>
 
           <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -25,31 +29,6 @@
         </div>
 
         <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start">
-
-            <div class="navbar-item has-dropdown is-hoverable">
-              <a class="navbar-link">
-                More
-              </a>
-
-              <div class="navbar-dropdown">
-                <a class="navbar-item">
-                  About
-                </a>
-                <a class="navbar-item">
-                  Jobs
-                </a>
-                <a class="navbar-item">
-                  Contact
-                </a>
-                <hr class="navbar-divider">
-                <a class="navbar-item">
-                  Report an issue
-                </a>
-              </div>
-            </div>
-          </div>
-
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
@@ -64,10 +43,14 @@
           </div>
         </div>
       </nav>
+      <!-- start of header template -->
+
     </header>
-    <div class="signup hero is-large">
-      <section class="hero-body column is-one-third is-offset-4-desktop">
-        <form id="form" class="form">
+    <div class="login hero is-large">
+      <section class="hero-body column is-one-third-desktop is-offset-4-desktop">
+
+        <!-- start of form template -->
+        <form id="form" class="form box">
           <span class="columns">
             <label class="label column is-full" for="email">Email:
               <input class="input" id="email" type="email" placeholder="email@address.com" required validate>
@@ -80,12 +63,16 @@
             </label>
           </span>
           <span class="column">
-            <input class="button is-primary" type="submit">
+            <input class="button is-primary" type="submit" value="Sign-in">
             <a class="tag has-text-link" href="./index.html">Create an Account</a>
           </span>
+          <p class="notification has-text-danger">Error Message!</p>
         </form>
+        <!-- end of form template -->
+
       </section>
     </div>
+    <footer class="section has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
   </body>
 
 </html>
