--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Sign-up!</title>
   </head>
 
-  <body class="is-mobile main">
+  <body class="is-mobile">
     <header class="navbar" role="navigation" aria-label="main navigation">
       <!-- start of header template -->
       <nav class="container">
@@ -19,14 +19,14 @@
             <span class="mdi mdi-library mdi-24px has-text-link"> InvoiceCreator</span>
           </a>
 
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
           </a>
         </div>
 
-        <div id="navbarBasicExample" class="navbar-menu">
+        <div id="navbarItems" class="navbar-menu">
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
