--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <title>Login to Your Account</title>
   </head>
 
-  <body class="is-mobile main">
+  <body class="is-mobile">
 
     <header class="navbar" role="navigation" aria-label="main navigation">
 
@@ -21,14 +21,14 @@
             <span class="mdi mdi-library mdi-24px has-text-link"> InvoiceCreator</span>
           </a>
 
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
           </a>
         </div>
 
-        <div id="navbarBasicExample" class="navbar-menu">
+        <div id="navbarItems" class="navbar-menu">
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
@@ -66,7 +66,7 @@
             <input class="button is-primary" type="submit" value="Sign-in">
             <a class="tag has-text-link" href="./index.html">Create an Account</a>
           </span>
-          <p class="notification has-text-danger">Error Message!</p>
+          <p class="notification has-text-danger">Password does not match!</p>
         </form>
         <!-- end of form template -->
 
