--- a/manage.html
+++ b/manage.html
@@ -10,7 +10,7 @@
     <title>Manage Your Invoices</title>
   </head>
 
-  <body class="is-mobile main">
+  <body class="is-mobile">
 
     <header class="navbar" role="navigation" aria-label="main navigation">
       <!-- start of header template -->
@@ -22,14 +22,14 @@
             <span class="mdi mdi-library mdi-24px has-text-link"> InvoiceCreator</span>
           </a>
 
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
           </a>
         </div>
 
-        <div id="navbarBasicExample" class="navbar-menu">
+        <div id="navbarItems" class="navbar-menu">
           <div class="navbar-end">
             <div class="navbar-item">
 
@@ -61,7 +61,7 @@
     </header>
 
     <section class="container row">
-      <h1 class="title has-text-white-ter">Manage Your Invoices</h1>
+      <h1 class="title is-1 has-text-white-ter">Manage Your Invoices</h1>
       <a href="#" class="button is-primary is-large">Create an Invoice</a>
       <div class="section manage box">
 
@@ -72,7 +72,7 @@
           <!-- start of table template -->
           <li class="columns">
             <div class="column">
-              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> ${ invoice_number }
+              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> #${ invoice_number }
             </div>
             <div class="column is-two-fifths-desktop">
               <span class="mdi mdi-account mdi-24px has-text-grey-light"></span> ${ first_name } ${ last_name }
@@ -88,7 +88,7 @@
 
           <li class="columns">
             <div class="column">
-              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> ${ invoice_number }
+              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> #${ invoice_number }
             </div>
             <div class="column is-two-fifths-desktop">
               <span class="mdi mdi-account mdi-24px has-text-grey-light"></span> ${ first_name } ${ last_name }
@@ -102,7 +102,7 @@
           </li>
           <li class="columns">
             <div class="column">
-              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> ${ invoice_number }
+              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> #${ invoice_number }
             </div>
             <div class="column is-two-fifths-desktop">
               <span class="mdi mdi-account mdi-24px has-text-grey-light"></span> ${ first_name } ${ last_name }
@@ -124,7 +124,7 @@
           <!-- start of table template -->
           <li class="columns">
             <div class="column">
-              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> ${ invoice_number }
+              <span class="mdi mdi-receipt mdi-24px has-text-grey-light"></span> #${ invoice_number }
             </div>
             <div class="column is-two-fifths-desktop">
               <span class="mdi mdi-account mdi-24px has-text-grey-light"></span> ${ first_name } ${ last_name }
