--- a/manage.html
+++ b/manage.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script defer src="bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.8.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Manage Your Invoices</title>
+    <title>Manage Invoices</title>
   </head>
 
   <body class="is-mobile">
@@ -61,8 +62,8 @@
     </header>
 
     <section class="container row">
-      <h1 class="title is-1 has-text-white-ter">Manage Your Invoices</h1>
-      <a href="#" class="button is-primary is-large">Create an Invoice</a>
+      <h1 class="title is-1 has-text-white">Manage Your Invoices</h1>
+      <a href="#" class="button is-primary is-medium">Create Invoice</a>
       <div class="section manage box">
 
         <h3 class="title is-3 has-text-danger">Outstanding</h3>
@@ -81,7 +82,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
           <!-- end of table template -->
@@ -97,7 +98,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
           <li class="columns">
@@ -111,7 +112,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
 
@@ -133,7 +134,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
           <!-- end of table template -->
@@ -143,7 +144,7 @@
 
       </div>
     </section>
-    <footer class="section has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
+    <footer class="has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
   </body>
 
 </html>
