--- a/received.html
+++ b/received.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script defer src="bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.8.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>Received Invoices</title>
@@ -61,7 +62,7 @@
     </header>
 
     <section class="container row">
-      <h1 class="title is-1 has-text-white-ter">Received Invoices</h1>
+      <h1 class="title is-1 has-text-white">Received Invoices</h1>
       <div class="section manage box">
 
         <h3 class="title is-3 has-text-danger">Outstanding</h3>
@@ -80,7 +81,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
           <!-- end of table template -->
@@ -96,7 +97,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
           <li class="columns">
@@ -110,7 +111,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
 
@@ -132,7 +133,7 @@
               <span class="mdi mdi-cash-multiple mdi-24px has-text-grey-light"></span> ${ total }
             </div>
             <span class="column">
-              <a href="#" class="button is-link">View Details</a>
+              <a href="./invoice.html" class="button is-link">View Details</a>
             </span>
           </li>
           <!-- end of table template -->
@@ -142,7 +143,7 @@
 
       </div>
     </section>
-    <footer class="section has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
+    <footer class="has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
   </body>
 
 </html>
