--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script defer src="bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.8.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Sign-up!</title>
+    <title>Account Sign-up</title>
   </head>
 
   <body class="is-mobile">
@@ -43,7 +44,7 @@
       </nav>
       <!-- end of header template -->
     </header>
-    <div class="signup hero is-large">
+    <div class="signup hero is-medium">
       <section class="hero-body column is-one-third-desktop is-offset-4-desktop">
 
         <!-- start of form template -->
@@ -84,7 +85,7 @@
 
       </section>
     </div>
-    <footer class="section has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
+    <footer class="has-text-white-ter has-text-centered">&copy; 2018 G.G. - We're O.G.</footer>
   </body>
 
 </html>
