removed unecessary classes

--- a/dashboard.html
+++ b/dashboard.html
@@ -59,7 +59,7 @@
       </nav>
       <!-- end of header template -->
     </header>
-    <section class="hero is-large container row">
+    <section class="hero is-large container">
       <div class="hero-body options columns">
         <div class="column">
           <div class="card box">
