--- a/manage.html
+++ b/manage.html
@@ -61,7 +61,7 @@
       <!-- end of header template -->
     </header>
 
-    <section class="container row">
+    <section class="container">
       <h1 class="title is-1 has-text-white">Manage Your Invoices</h1>
       <a href="#" class="button is-primary is-medium">Create Invoice</a>
       <div class="section manage box">
