--- a/received.html
+++ b/received.html
@@ -61,7 +61,7 @@
       <!-- end of header template -->
     </header>
 
-    <section class="container row">
+    <section class="container">
       <h1 class="title is-1 has-text-white">Received Invoices</h1>
       <div class="section manage box">
 
