--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
             </label>
           </span>
           <span class="column">
-            <input class="button is-primary" type="submit" value="Sign-in">
+            <input class="button is-primary" type="submit" value="Log-in">
             <a class="tag has-text-link" href="./index.html">Create an Account</a>
           </span>
           <p class="notification has-text-danger">Password does not match!</p>
