--- a/invoice.html
+++ b/invoice.html
@@ -164,7 +164,7 @@
           </div>
 
           <a href="./manage.html" class="button del is-danger is-medium">Delete</a>
-          <a href="./manage.html" class="button edit is-link is-medium">Edit</a>
+          <a href="./generate.html" class="button edit is-link is-medium">Edit</a>
           <a href="./manage.html" class="button send is-primary is-medium">Send</a>
           <!-- invoice footer template end -->
 
