updated manage template

--- a/manage.html
+++ b/manage.html
@@ -63,7 +63,7 @@
 
     <section class="container">
       <h1 class="title is-1 has-text-white">Manage Your Invoices</h1>
-      <a href="#" class="button is-primary is-medium">Create Invoice</a>
+      <a href="./generate.html" class="button is-primary is-medium">Create Invoice</a>
       <div class="section manage box">
 
         <h3 class="title is-3 has-text-danger">Outstanding</h3>
