Login is Functional - added js files - added init structures - separated out header and logout function although logout is still WIP

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </label>
           </span>
           <span class="column">
-            <input class="button is-primary" type="submit" value="Log-in">
+            <button class="button is-primary" type="submit">Login</button>
             <a class="tag has-text-link" href="./index.html">Create an Account</a>
           </span>
           <p class="notification has-text-danger">Password does not match!</p>
