--- a/signup.html
+++ b/signup.html
@@ -31,10 +31,10 @@
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
-                <a href="./index.html" class="button is-primary">
+                <a href="./sigup.html" class="button is-primary">
                   <strong>Sign up</strong>
                 </a>
-                <a href="./login.html" class="button is-light">
+                <a href="./index.html" class="button is-light">
                   Log in
                 </a>
               </div>
