--- a/index.html
+++ b/index.html
@@ -15,38 +15,8 @@
 
     <header class="navbar" role="navigation" aria-label="main navigation">
 
-      <!-- start of header template -->
-      <nav class="container">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <span class="mdi mdi-library mdi-24px has-text-link"> InvoiceCreator</span>
-          </a>
-
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-
-        <div id="navbarItems" class="navbar-menu">
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a href="./index.html" class="button is-primary">
-                  <strong>Sign up</strong>
-                </a>
-                <a href="./login.html" class="button is-light">
-                  Log in
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <!-- start of header template -->
-
     </header>
+
     <div class="login hero is-medium">
       <section class="hero-body column is-one-third-desktop is-offset-4-desktop">
 
@@ -65,7 +35,7 @@
           </span>
           <span class="column">
             <button class="button is-primary" type="submit">Login</button>
-            <a class="tag has-text-link" href="./index.html">Create an Account</a>
+            <a class="tag has-text-link" href="./signup.html">Create an Account</a>
           </span>
           <p class="notification has-text-danger">Password does not match!</p>
         </form>
