--- a/signup.html
+++ b/signup.html
@@ -13,36 +13,7 @@
 
   <body class="is-mobile">
     <header class="navbar" role="navigation" aria-label="main navigation">
-      <!-- start of header template -->
-      <nav class="container">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <span class="mdi mdi-library mdi-24px has-text-link"> InvoiceCreator</span>
-          </a>
 
-          <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-
-        <div id="navbarItems" class="navbar-menu">
-          <div class="navbar-end">
-            <div class="navbar-item">
-              <div class="buttons">
-                <a href="./sigup.html" class="button is-primary">
-                  <strong>Sign up</strong>
-                </a>
-                <a href="./index.html" class="button is-light">
-                  Log in
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <!-- end of header template -->
     </header>
     <div class="signup hero is-medium">
       <section class="hero-body column is-one-third-desktop is-offset-4-desktop">
@@ -77,7 +48,7 @@
           </span>
           <span class="column has-text-centered">
             <input class="button is-primary" type="submit" value="Create an Account">
-            <a class="tag has-text-link" href="./login.html">Already have an account?</a>
+            <a class="tag has-text-link" href="./index.html">Already have an account?</a>
           </span>
           <p class="notification has-text-danger">Email account already in use!</p>
         </form>
